<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/signupUsernameEditText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupPasswordEditText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupUsernameEditText" />

    <EditText
        android:id="@+id/signupConfirmPasswordEditText"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPasswordEditText" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="243dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupConfirmPasswordEditText" />

  </androidx.constraintlayout.widget.ConstraintLayout>